# candle

./: Cargo.toml  README.md
benches/: criterion.rs
examples/: autodiff.rs
src/: autodiff.rs  dataset.rs  experimentals.rs  lib.rs  main.rs  ops.rs  reverse.rs  scalar.rs  tensor.rs
src/autodiff/: ops.rs  reverse.rs  reverse_graph.rs  reverse_tape.rs
src/experimentals/scalar/: ad_backward_graph.rs  ad_backward_tape.rs  ad_backward_tape_owned.rs
src/scalar/: ad_backward_graph.rs  ad_backward_tape.rs  ad_backward_tape_owned.rs
src/tensor/: cpu.rs  error.rs  layout.rs  ops.rs  typ.rs
tests/: assert.rs  tensor.rs  test_tensor.rs  test_tensor_iteration.rs  test_tensor_layout.rs
