[package]
name = "candle"
description = "An n-dimensional array library with support for automatic differentitation."
categories = ["data-structures"]
keywords = ["array", "data-structure", "multidimensional", "matrix"]

version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "gitlab.com/letung3105/candle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4"
