[package]
name = "candle"
description = "An n-dimensional array library with support for automatic differentitation."
categories = ["data-structures"]
keywords = ["array", "data-structure", "multidimensional", "matrix"]

version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "gitlab.com/letung3105/candle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "criterion"
harness = false

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"
